--- a/css/style.less
+++ b/css/style.less
@@ -265,6 +265,9 @@ body {
     font-size: 18px;
     font-weight: 700;
   }
+  img {
+    display: initial;
+  }
   p {
     margin-top: -10px;
     font-size: 14px;
@@ -363,8 +366,7 @@ body {
   display: none;
   margin-left: 40px;
 }
-@media (min-width:991px) and (max-width: 1024px) {
-  
+@media (min-width: 991px) and (max-width: 1024px) {
 }
 @media (min-width: 550px) and (max-width: 990px) {
   .checkbtn {
@@ -597,3 +599,15 @@ body {
     grid-template-columns: 100%;
   }
 }
+
+// css slick js
+.slick-dots {/* position: absolute; bottom: -3.5rem; */ display: block; padding: 0; margin: 0; list-style: none; line-height: 0;}
+.slick-dots li {position: relative; display: inline-block; width: 0.9375rem; height: 0.9375rem; margin: 0 0.875rem; padding: 0; cursor: pointer;}
+.slick-dots li:first-child {margin-left: 0;}
+.slick-dots li:last-child {margin-right: 0;}
+
+.slick-dots li button {font-size: 0; line-height: 0; display: block; width: 0.9375rem; height: 0.9375rem; padding: 0.3125rem; cursor: pointer; color: transparent; outline: none; border:none; background: rgba(47, 31, 22, 0.5); border-radius: 50%;}
+
+.slick-dots li button:hover,
+.slick-dots li button:focus,
+.slick-dots li.slick-active button {outline: none; background-color: #2d1d15; transition: all 300ms ease 0s; color: #2d1d15;}
