--- a/css/style.less
+++ b/css/style.less
@@ -1,39 +1,61 @@
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+}
+.box-sizing(@_bs) {
+  -webkit-box-sizing: @_bs;
+  box-sizing: @_bs;
+}
+.flex-wrap(@_fw) {
+  -ms-flex-wrap: @_fw;
+  flex-wrap: @_fw;
+}
 .container {
   width: 1170px;
   margin: auto;
   padding: 0;
-  box-sizing: border-box;
+  .box-sizing(border-box);
 }
 .row {
-  display: flex;
-  flex-wrap: wrap;
+  .flex;
+  .flex-wrap(wrap);
   margin: 0 -15px;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 @main-font: "Poppins", sans-serif;
+
 body {
   font-family: @main-font;
   font-weight: 400;
   font-size: 16px;
 }
+
+@hover-text: #fff;
+
 .header {
   background-color: #292929;
-  background-image: url(../img/banner.jpg);
+  background-image: url(../img/banner.png);
   background-repeat: no-repeat;
   background-size: auto;
-  opacity: 0.6;
   &-top-inner {
-    display: flex;
+    .flex;
     justify-content: space-around;
     color: #ffffff;
     line-height: 100px;
     .logo {
-      display: flex;
+      .flex;
       align-items: center;
     }
     .menu {
       ul {
-        display: flex;
+        .flex;
         li:first-child {
           margin-left: 36px;
         }
@@ -43,30 +65,82 @@ body {
           a {
             font-size: 16px;
             font-weight: 400;
-            color: #fff;
-            &:hover {
-            }
+            color: @hover-text;
           }
         }
       }
     }
     .search-item {
       ul {
-        display: flex;
+        .flex;
         justify-content: flex-end;
         align-items: center;
         li {
           margin-left: 26px;
           // padding-top: 4px;
           a {
-            color: #fff;
+            color: @hover-text;
           }
         }
       }
     }
   }
   &-top-inner-moblie {
+    .flex;
     display: none;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    color: #ffffff;
+    .logo {
+      text-align: center;
+      img {
+        max-width: 70%;
+      }
+    }
+    .menu {
+      display: block;
+
+      ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        text-align: center;
+        left: 100%;
+        transition: all 0.1s;
+        li {
+          padding: 10px 0;
+          text-transform: uppercase;
+          font-weight: 700;
+          background-color: #dddddd;
+          a:hover,
+          a:active {
+            color: #0082e6;
+            background-color: aqua;
+          }
+        }
+        li:first-child {
+          text-align: left;
+          left: 10px;
+        }
+      }
+    }
+    .search-item ul {
+      .flex;
+      li {
+        margin-right: 3px;
+        a {
+          color: @hover-text;
+        }
+      }
+    }
+    #check:checked ~ ul {
+      left: 0;
+    }
+    #colse:checked ~ ul {
+      left: 100%;
+    }
   }
 }
 
@@ -105,14 +179,18 @@ body {
 
 .swot {
   .swot-inner {
-    display: grid;
+    .grid;
     grid-template-columns: repeat(3, auto);
     margin-top: -78px;
-    z-index: 1;
     position: relative;
     background-color: #fff;
-    img {
-      max-width: 100%;
+
+    .item:nth-child(1),
+    .item:nth-child(3),
+    .item:nth-child(5) {
+      img {
+        width: 100%;
+      }
     }
     .item:nth-child(2),
     .item:nth-child(6),
@@ -121,6 +199,7 @@ body {
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
       img {
         margin-top: 31px;
+        max-width: 100%;
       }
       h5 {
         font-size: 18px;
@@ -151,7 +230,7 @@ body {
     &-inner {
       border-bottom: 1px solid #dddddd;
       ul {
-        display: flex;
+        .flex;
         font-size: 18px;
         font-weight: 700;
         text-transform: uppercase;
@@ -174,7 +253,7 @@ body {
 
 .product-item {
   .item {
-    display: grid;
+    .grid;
     grid-template-columns: repeat(4, 25%);
     margin-top: 40px;
     grid-gap: 6px;
@@ -186,9 +265,9 @@ body {
       }
     }
     &-wrapper {
+      position: relative;
       max-width: 270px;
-      display: grid;
-      grid-template-columns: 80% 20%;
+      .grid;
       padding-top: 12px;
       text-align: center;
       &:hover {
@@ -211,14 +290,13 @@ body {
           margin-bottom: 35px;
           margin-top: 6px;
         }
-        img {
-          margin-left: 30px;
-        }
       }
       .icon {
         opacity: 0;
-        // display: none;
-        display: grid;
+        top: 30px;
+        right: 0px;
+        position: absolute;
+        .grid;
         grid-template-rows: repeat(7, auto);
         row-gap: 10px;
         text-align: right;
@@ -236,7 +314,9 @@ body {
         }
       }
       &:hover {
-        opacity: 1;
+        .icon {
+          opacity: 1;
+        }
       }
     }
   }
@@ -283,7 +363,7 @@ body {
 .intro-partner {
   margin-bottom: -7px;
   .logo {
-    display: grid;
+    .grid;
     grid-template-columns: repeat(6, 100/6%);
     .item {
       text-align: center;
@@ -318,17 +398,20 @@ body {
       a {
         margin-right: 27px;
         font-size: 18px;
+        &:hover {
+          color: #fff;
+        }
       }
     }
   }
   .footer-info-company {
-    display: grid;
-    grid-template-columns: repeat(4, 25%);
+    .grid;
+    grid-template-columns: repeat(4, auto);
     grid-gap: 8px;
     grid-row-gap: 10px;
     .item:first-child {
       .item-inner {
-        display: grid;
+        .grid;
         grid-template-columns: 10% 80%;
       }
     }
@@ -340,7 +423,7 @@ body {
         color: #ffffff;
         font-weight: 700;
         text-transform: uppercase;
-        margin-top: 75px;
+        margin-top: 25px;
         margin-bottom: 26px;
       }
       p {
@@ -348,6 +431,10 @@ body {
       }
       a {
         color: #777777;
+        text-decoration: none;
+        &:hover {
+          color: @hover-text;
+        }
       }
     }
   }
@@ -368,7 +455,7 @@ body {
 }
 @media (min-width: 991px) and (max-width: 1024px) {
 }
-@media (min-width: 550px) and (max-width: 990px) {
+@media (min-width: 630px) and (max-width: 990px) {
   .checkbtn {
     display: block;
   }
@@ -377,58 +464,13 @@ body {
   }
   .header-top-inner-moblie {
     display: block;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    color: #ffffff;
-    .menu {
-      display: block;
+    .flex;
+  }
 
-      ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        text-align: center;
-        left: 100%;
-        transition: all 0.1s;
-        li {
-          padding: 10px 0;
-          text-transform: uppercase;
-          font-weight: 700;
-          background-color: #dddddd;
-          a:hover,
-          a:active {
-            color: #0082e6;
-            background-color: aqua;
-          }
-        }
-        li:first-child {
-          text-align: left;
-          left: 10px;
-        }
-      }
-    }
-
-    .search-item ul {
-      display: flex;
-      a {
-        margin-right: 5px;
-        color: #ffffff;
-        font-size: 20px;
-      }
-    }
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
-  #colse:checked ~ ul {
-    left: 100%;
-  }
   .swot {
     .swot-inner {
       grid-template-columns: repeat(2, 50%);
+      row-gap: 20px;
       .item:nth-child(4),
       .item:nth-child(2),
       .item:nth-child(6) {
@@ -465,7 +507,7 @@ body {
   }
 }
 
-@media (min-width: 320px) and (max-width: 550px) {
+@media (min-width: 320px) and (max-width: 629px) {
   .container {
     max-width: 90%;
   }
@@ -477,60 +519,7 @@ body {
   }
   .header-top-inner-moblie {
     display: block;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    color: #ffffff;
-    .logo {
-      text-align: center;
-      img {
-        max-width: 70%;
-      }
-    }
-    .menu {
-      display: block;
-
-      ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        text-align: center;
-        left: 100%;
-        transition: all 0.1s;
-        li {
-          padding: 10px 0;
-          text-transform: uppercase;
-          font-weight: 700;
-          background-color: #dddddd;
-          a:hover,
-          a:active {
-            color: #0082e6;
-            background-color: aqua;
-          }
-        }
-        li:first-child {
-          text-align: left;
-          left: 10px;
-        }
-      }
-    }
-    .search-item ul {
-      display: flex;
-      li {
-        margin-right: 3px;
-        a {
-          color: #fff;
-        }
-      }
-    }
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
-  #colse:checked ~ ul {
-    left: 100%;
+    .flex;
   }
   .header-bottom {
     h2 {
@@ -542,7 +531,9 @@ body {
     }
   }
   .swot .swot-inner {
-    grid-template-columns: 100%;
+    margin: auto;
+    max-width: 300px;
+    grid-template-columns: auto;
     img {
       max-width: 100%;
     }
@@ -574,10 +565,19 @@ body {
       }
     }
     .product-item .item {
-      grid-template-columns: 100%;
-      .item-wrapper-inner img {
-        margin-left: 0;
-        max-width: 100%;
+      grid-template-columns: repeat(2, auto);
+      &-wrapper {
+        margin: auto;
+      }
+      .item-wrapper-inner {
+        img {
+          margin-left: 0;
+          max-width: 100%;
+        }
+        h6,
+        p {
+          margin-left: 0;
+        }
       }
     }
   }
@@ -588,26 +588,66 @@ body {
     }
   }
   .footer .footer-conpany-intro .social-company {
-    display: flex;
+    .flex;
     justify-content: space-around;
   }
 
   .intro-partner .logo {
-    grid-template-columns: 100%;
+    grid-template-columns: repeat(2, auto);
   }
   .footer .footer-info-company {
     grid-template-columns: 100%;
+    .item h4 {
+      margin-top: 50px;
+    }
   }
 }
 
 // css slick js
-.slick-dots {/* position: absolute; bottom: -3.5rem; */ display: block; padding: 0; margin: 0; list-style: none; line-height: 0;}
-.slick-dots li {position: relative; display: inline-block; width: 0.9375rem; height: 0.9375rem; margin: 0 0.875rem; padding: 0; cursor: pointer;}
-.slick-dots li:first-child {margin-left: 0;}
-.slick-dots li:last-child {margin-right: 0;}
+.slick-dots {
+  /* position: absolute; bottom: -3.5rem; */
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  line-height: 0;
+}
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 0.9375rem;
+  height: 0.9375rem;
+  margin: 0 0.875rem;
+  padding: 0;
+  cursor: pointer;
+}
+.slick-dots li:first-child {
+  margin-left: 0;
+}
+.slick-dots li:last-child {
+  margin-right: 0;
+}
 
-.slick-dots li button {font-size: 0; line-height: 0; display: block; width: 0.9375rem; height: 0.9375rem; padding: 0.3125rem; cursor: pointer; color: transparent; outline: none; border:none; background: rgba(47, 31, 22, 0.5); border-radius: 50%;}
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 0.6375rem;
+  height: 0.6375rem;
+  padding: 0.3125rem;
+  cursor: pointer;
+  color: transparent;
+  outline: none;
+  border: none;
+  background: rgba(47, 31, 22, 0.5);
+  border-radius: 50%;
+}
 
 .slick-dots li button:hover,
 .slick-dots li button:focus,
-.slick-dots li.slick-active button {outline: none; background-color: #2d1d15; transition: all 300ms ease 0s; color: #2d1d15;}
+.slick-dots li.slick-active button {
+  outline: none;
+  background-color: #2d1d15;
+  transition: all 300ms ease 0s;
+  color: #2d1d15;
+}
