thietcv fix-product

--- a/css/style.less
+++ b/css/style.less
@@ -489,7 +489,8 @@ body {
   }
   .product-item {
     .item {
-      grid-template-columns: repeat(2, 50%);
+      grid-template-columns: repeat(2, auto);
+      justify-content: space-around;
       img {
         text-align: center;
         max-width: 100%;
@@ -598,7 +599,7 @@ body {
   .footer .footer-info-company {
     grid-template-columns: 100%;
     .item h4 {
-      margin-top: 50px;
+      margin-top: 20px;
     }
   }
 }
