--- a/css/style.less
+++ b/css/style.less
@@ -16,6 +16,30 @@
   -ms-flex-wrap: @_fw;
   flex-wrap: @_fw;
 }
+.justify-content(@_jc) {
+  -ms-flex-pack: distribute;
+  justify-content: @_jc;
+}
+
+.grid-template-columns(@_gtc) {
+  -ms-grid-columns: @_gtc;
+  grid-template-columns: @_gtc;
+}
+.align-items(@_ai) {
+  -webkit-box-align: @_ai;
+  -ms-flex-align: @_ai;
+  align-items: @_ai;
+}
+.transition(@_tr) {
+  -webkit-transition: @_tr;
+     -o-transition: @_tr;
+     transition: @_tr;
+}
+.grid-template-rows(@_gtr) {
+  -ms-grid-rows: @_gtr;
+  grid-template-rows: @_gtr;
+}
+
 .container {
   width: 1170px;
   margin: auto;
@@ -26,6 +50,10 @@
   .flex;
   .flex-wrap(wrap);
   margin: 0 -15px;
+}
+.box-shadow (@_bs){
+  -webkit-box-shadow: @_bs;
+        box-shadow: @_bs;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
@@ -43,15 +71,15 @@ body {
   background-color: #292929;
   background-image: url(../img/banner.png);
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   &-top-inner {
     .flex;
-    justify-content: space-around;
+    .justify-content(space-around);
     color: #ffffff;
     line-height: 100px;
     .logo {
       .flex;
-      align-items: center;
+      .align-items(center);
     }
     .menu {
       ul {
@@ -73,8 +101,8 @@ body {
     .search-item {
       ul {
         .flex;
-        justify-content: flex-end;
-        align-items: center;
+        .justify-content(flex-end);
+        .align-items(center);
         li {
           margin-left: 26px;
           // padding-top: 4px;
@@ -88,8 +116,8 @@ body {
   &-top-inner-moblie {
     .flex;
     display: none;
-    justify-content: space-between;
-    align-items: center;
+    .justify-content(space-between);
+    .align-items(center);
     padding-top: 20px;
     color: #ffffff;
     .logo {
@@ -108,7 +136,7 @@ body {
         top: 0;
         text-align: center;
         left: 100%;
-        transition: all 0.1s;
+        .transition(all 0.1s);
         li {
           padding: 10px 0;
           text-transform: uppercase;
@@ -180,7 +208,7 @@ body {
 .swot {
   .swot-inner {
     .grid;
-    grid-template-columns: repeat(3, auto);
+    .grid-template-columns(repeat(3, auto));
     margin-top: -78px;
     position: relative;
     background-color: #fff;
@@ -254,7 +282,7 @@ body {
 .product-item {
   .item {
     .grid;
-    grid-template-columns: repeat(4, 25%);
+    .grid-template-columns(repeat(4, 25%));
     margin-top: 40px;
     grid-gap: 6px;
     grid-row-gap: 25px;
@@ -297,7 +325,7 @@ body {
         right: 0px;
         position: absolute;
         .grid;
-        grid-template-rows: repeat(7, auto);
+       .grid-template-rows(repeat(7, auto));
         row-gap: 10px;
         text-align: right;
         margin-right: 20px;
@@ -364,7 +392,7 @@ body {
   margin-bottom: -7px;
   .logo {
     .grid;
-    grid-template-columns: repeat(6, 100/6%);
+    .grid-template-columns(repeat(6, 100/6%));
     .item {
       text-align: center;
     }
@@ -406,13 +434,13 @@ body {
   }
   .footer-info-company {
     .grid;
-    grid-template-columns: repeat(4, auto);
+    .grid-template-columns(repeat(4, auto));
     grid-gap: 8px;
     grid-row-gap: 10px;
     .item:first-child {
       .item-inner {
         .grid;
-        grid-template-columns: 10% 80%;
+        .grid-template-columns(10% 80%);
       }
     }
     .item {
@@ -453,8 +481,7 @@ body {
   display: none;
   margin-left: 40px;
 }
-@media (min-width: 991px) and (max-width: 1024px) {
-}
+
 @media (min-width: 630px) and (max-width: 990px) {
   .checkbtn {
     display: block;
@@ -469,7 +496,7 @@ body {
 
   .swot {
     .swot-inner {
-      grid-template-columns: repeat(2, 50%);
+      .grid-template-columns(repeat(2, 50%));
       row-gap: 20px;
       .item:nth-child(4),
       .item:nth-child(2),
@@ -489,8 +516,8 @@ body {
   }
   .product-item {
     .item {
-      grid-template-columns: repeat(2, auto);
-      justify-content: space-around;
+      .grid-template-columns(repeat(2, auto));
+      .justify-content(space-around);
       img {
         text-align: center;
         max-width: 100%;
@@ -498,10 +525,10 @@ body {
     }
   }
   .intro-partner .logo {
-    grid-template-columns: repeat(3, 100/3%);
+    .grid-template-columns(repeat(3, 100/3%));
   }
   .footer .footer-info-company {
-    grid-template-columns: repeat(2, auto);
+    .grid-template-columns(repeat(2, auto));
   }
   .feedback {
     padding-bottom: 50px;
@@ -534,7 +561,7 @@ body {
   .swot .swot-inner {
     margin: auto;
     max-width: 300px;
-    grid-template-columns: auto;
+    .grid-template-columns(auto);
     img {
       max-width: 100%;
     }
@@ -546,7 +573,7 @@ body {
       }
       p {
         padding: 10px;
-        justify-content: space-between;
+        .justify-content(space-between);
       }
     }
   }
@@ -566,7 +593,7 @@ body {
       }
     }
     .product-item .item {
-      grid-template-columns: repeat(2, auto);
+      .grid-template-columns(repeat(2, auto));
       &-wrapper {
         margin: auto;
       }
@@ -590,14 +617,14 @@ body {
   }
   .footer .footer-conpany-intro .social-company {
     .flex;
-    justify-content: space-around;
+    .justify-content(space-around);
   }
 
   .intro-partner .logo {
-    grid-template-columns: repeat(2, auto);
+    .grid-template-columns(repeat(2, auto));
   }
   .footer .footer-info-company {
-    grid-template-columns: 100%;
+    .grid-template-columns(100%);
     .item h4 {
       margin-top: 20px;
     }
@@ -649,6 +676,6 @@ body {
 .slick-dots li.slick-active button {
   outline: none;
   background-color: #2d1d15;
-  transition: all 300ms ease 0s;
+  .transition(all 300ms ease 0s);
   color: #2d1d15;
 }
