--- a/css/style.less
+++ b/css/style.less
@@ -72,7 +72,7 @@ body {
   background-image: url(../img/girl.png) ,url(../img/Base.png);
   background-position: right bottom, left top;
   background-repeat: no-repeat, no-repeat;
-  background-size: 100px 80px,100px 80px ;
+  background-size: 100px ,80px ;
   // background: url(../img/girl.png) right bottom no-repeat, url(../img/Base.png) left top repeat;
   // background-image: url(../Base.png) right bottom no-repeat ,url(../img/girl.png) right bottom no-repeat;
   &-top-inner {
@@ -654,9 +654,7 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 629px) {
-  .container {
-    max-width: 90%;
-  }
+
 
   .checkbtn {
     display: block;
